<resources>
    <string name="app_name">Saarthi</string>
    <string name="log_in">Log in</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in_as_passenger">Log in as passenger</string>
    <string name="log_in_as_conductor">Log in as Conductor</string>
    <string name="register">Register me</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_maps">Map</string>
    <string name="select1">Select Source</string>
    <string name="select2">Select Destination</string>
    <string name="proceedToPay">Proceed To Pay</string>
    <string name="title_activity_book_ticket">BookTicketActivity</string>
    <string name="title_activity_conductor_depo">Conductor Depo</string>
    <string name="enter_depo">Enter Depo</string>
    <string name="find_routes">Find Routes</string>
    <string name="title_activity_route_list">RouteList</string>
    <string name="route_list">Route List</string>
    <string name="next_bus">Next Bus</string>
    <string name="show_timing">Show Timing</string>
    <string name="enter_passenger">Enter Passenger Name</string>
    <string name="enter_passenger_count">Passenger Count</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_dest">Enter Destination</string>
    <string name="availability">Availability</string>
    <string name="issue_ticket">Issue Ticket</string>
    <string name="title_activity_conductor_tasks">ConductorTasks</string>
    <string name="print_details">Print</string>
    <string name="select_route">Select</string>
    <string name="scan_ticket">Scan Ticket</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="ticket_no">Ticket No</string>
    <string name="ticket_details">Ticket Details</string>


    <string-array name="stops_array">
        <item>Infosys Circle</item>
        <item>Hingewadi Chowk</item>
        <item>Wakad</item>
        <item>Aundh</item>
        <item>Vishal Nagar</item>
        <item>Pune University</item>
        <item>Shivajinagar</item>
        <item>PMC</item>
    </string-array>

    <string name="myWallet">My Wallet</string>
    <string name="currentBalance">Current Balance:</string>
    <string name="pay">PAY</string>

    <string name="title_activity_my_wallet">MyWalletActivity</string>
    <string name="recharge">Recharge Now</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="paymentAmount">Payment Amount</string>
    <string name="paymentSuccessfull">Payment Successfull!</string>
    <string name="viewTicket">Open Ticket</string>
    <string name="title_activity_ticket">Ticket</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="registrationComplete">Registration Successfull!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_registration_complete">RegistrationComplete</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
