<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MapsActivity">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView0"
        android:textSize="45dp"
        android:textColor="#20B2AA"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/textView1"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView0"
        android:layout_centerHorizontal="true"
        android:textColor="#FFA07A"
        android:textSize="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/enter_username"
        android:focusable="true"
        android:textColorHint="#696969"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="#696969"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:hint="@string/enter_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_as_passenger"
        android:id="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="46dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_as_conductor"
        android:id="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button"
        android:layout_marginTop="5dp"
        android:onClick="openRoutes"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="10dp"
        android:id="@+id/radioButton"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/register"
        android:textSize="15dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorLink="@android:color/primary_text_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contextClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:text="Temp Ticket"
        android:textSize="15dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorLink="@android:color/primary_text_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:contextClickable="true" />

</RelativeLayout>
