<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appathon.saarthi.saarthi.MyWalletActivity">

    <TextView android:text="@string/myWallet" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView0"
        android:textSize="45dp"
        android:textColor="#20B2AA"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentBalance"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="180dp"
        android:layout_alignParentLeft="true"
        android:textColor="#FFA07A"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹ 235.00"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#00CC00"
        android:textSize="35dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentAmount"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:textColor="#20B2AA"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="₹ 15.00"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FF4500"
        android:textSize="25dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:id="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge"
        android:id="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="15dp"/>


</RelativeLayout>
