<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appathon.saarthi.saarthi.TicketPrint">

    <TextView
        android:text="@string/ticket_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ticket_no"
        android:textSize="20dp"
        android:textColor="#20B2AA"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/ticket_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ticket_details"
        android:textSize="20dp"
        android:textColor="#20B2AA"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/ticket_no"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_details"
        android:id="@+id/print"
        android:layout_below="@+id/ticket_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
