<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appathon.saarthi.saarthi.IssueTicket">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passenger_count"
        android:hint="@string/enter_passenger_count"
        android:focusable="true"
        android:textColorHint="#696969"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_dest"
        android:hint="@string/enter_dest"
        android:layout_below="@+id/passenger_count"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timing"
        android:hint="@string/enter_dest"
        android:layout_below="@+id/enter_dest"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:hint="@string/availability"
        android:text="@string/availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/availability"
        android:textSize="20dp"
        android:textColor="#20B2AA"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/timing"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue_ticket"
        android:id="@+id/issueticket"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/availability"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
