<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appathon.saarthi.saarthi.BookTicketActivity">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select1"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_below="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stops_array"
        android:layout_marginTop="30dp"
        android:prompt="@string/select1"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/select2"
        />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stops_array"
        android:layout_below="@+id/textView0"
        android:layout_marginTop="200dp"
        android:prompt="@string/select2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceedToPay"
        android:id="@+id/button"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"/>

    <!--<Spinner-->
        <!--android:id="@+id/spinner0"-->
        <!--android:layout_bemlow="@+id/textView1"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:prompt="@string/select1"/>-->

    <!--<TextView-->
        <!--android:id="@+id/textView1"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="200dp"-->
        <!--android:text="Select Source"-->
        <!--/>-->

    <!--<Spinner-->
        <!--android:id="@+id/spinner1"-->
        <!--android:layout_below="@+id/textView1"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:layout_marginTop="30dp"-->
        <!--android:prompt="@string/select2"/>-->

</RelativeLayout>
